[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/TableNode.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Game.gd" type="Script" id=2]
[ext_resource path="res://DefaultFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/cards/default.png" type="Texture" id=4]
[ext_resource path="res://LargeFont.tres" type="DynamicFont" id=5]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.156863, 0.156863, 0.156863, 1 )

[node name="UIElements" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_constants/separation = 20

[node name="TopRow" type="HBoxContainer" parent="UIElements"]
margin_right = 1040.0
margin_bottom = 100.0

[node name="MenuButton" type="Button" parent="UIElements/TopRow"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 5 )
text = "<-"

[node name="ScoreCenter" type="CenterContainer" parent="UIElements/TopRow"]
margin_left = 103.0
margin_right = 750.0
margin_bottom = 100.0
size_flags_horizontal = 3

[node name="ScoreLabel" type="Label" parent="UIElements/TopRow/ScoreCenter"]
margin_left = 77.0
margin_top = 7.0
margin_right = 569.0
margin_bottom = 93.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 5 )
text = "Score: [x]"

[node name="TimerLabel" type="Label" parent="UIElements/TopRow"]
margin_left = 753.0
margin_right = 1040.0
margin_bottom = 86.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 5 )
text = "[time]"

[node name="TopLabels" type="GridContainer" parent="UIElements"]
visible = false
margin_top = 120.0
margin_right = 1040.0
margin_bottom = 120.0
columns = 3

[node name="GameModeLabel" type="Label" parent="UIElements/TopLabels"]
visible = false
margin_top = 79.0
margin_right = 356.0
margin_bottom = 155.0
text = "[gamemode]"

[node name="SetCountLabel" type="Label" parent="UIElements/TopLabels"]
visible = false
margin_top = 79.0
margin_right = 336.0
margin_bottom = 155.0
text = "Sets: [sets]"

[node name="TableNode" parent="UIElements" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 120.0
margin_right = 1040.0
margin_bottom = 1760.0

[node name="BottomRow" type="HBoxContainer" parent="UIElements"]
margin_top = 1780.0
margin_right = 1040.0
margin_bottom = 1880.0
custom_constants/separation = 20

[node name="HighlightButton" type="Button" parent="UIElements/BottomRow"]
margin_right = 510.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
text = "Show Set"

[node name="RestartButton" type="Button" parent="UIElements/BottomRow"]
margin_left = 530.0
margin_right = 1040.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
text = "Restart"

[node name="BannerAd" type="TextureRect" parent="UIElements"]
visible = false
margin_top = 1680.0
margin_right = 1040.0
margin_bottom = 1880.0
rect_min_size = Vector2( 0, 200 )
texture = ExtResource( 4 )
expand = true

[node name="GameOverWindow" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -300.0
margin_right = 500.0
margin_bottom = 300.0
rect_min_size = Vector2( 1000, 600 )
color = Color( 0.266667, 0.266667, 0.266667, 1 )

[node name="GameOverLabel" type="RichTextLabel" parent="GameOverWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/normal_font = ExtResource( 3 )
text = "empty"

[connection signal="game_over" from="." to="." method="_on_Game_game_over"]
[connection signal="pressed" from="UIElements/TopRow/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="UIElements/BottomRow/HighlightButton" to="." method="_on_HighlightButton_pressed"]
[connection signal="pressed" from="UIElements/BottomRow/RestartButton" to="." method="_on_RestartButton_pressed"]
